--- a/ZipZap.xcodeproj/xcshareddata/xcschemes/ZipZap (iOS Framework).xcscheme
+++ b/ZipZap.xcodeproj/xcshareddata/xcschemes/ZipZap (iOS Framework).xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0940"
+   LastUpgradeVersion = "1030"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -26,9 +26,29 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D899CF95162C5EC100112F49"
+               BuildableName = "ZipZapTests.xctest"
+               BlueprintName = "ZipZapTests"
+               ReferencedContainer = "container:ZipZap.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "D87BA1F71B3D6DEA00ED7EB3"
+            BuildableName = "ZipZap.framework"
+            BlueprintName = "ZipZap (iOS Framework)"
+            ReferencedContainer = "container:ZipZap.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
