--- a/ZipZap.xcodeproj/xcshareddata/xcschemes/ZipZapTests.xcscheme
+++ b/ZipZap.xcodeproj/xcshareddata/xcschemes/ZipZapTests.xcscheme
@@ -5,22 +5,6 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <BuildActionEntries>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BF8624AB1BB7495200C12EEE"
-               BuildableName = "ZipZap.framework"
-               BlueprintName = "ZipZap (tvOS Framework)"
-               ReferencedContainer = "container:ZipZap.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -28,6 +12,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "D899CF95162C5EC100112F49"
+               BuildableName = "ZipZapTests.xctest"
+               BlueprintName = "ZipZapTests"
+               ReferencedContainer = "container:ZipZap.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <AdditionalOptions>
       </AdditionalOptions>
@@ -42,15 +36,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF8624AB1BB7495200C12EEE"
-            BuildableName = "ZipZap.framework"
-            BlueprintName = "ZipZap (tvOS Framework)"
-            ReferencedContainer = "container:ZipZap.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -60,15 +45,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF8624AB1BB7495200C12EEE"
-            BuildableName = "ZipZap.framework"
-            BlueprintName = "ZipZap (tvOS Framework)"
-            ReferencedContainer = "container:ZipZap.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
